# FoodWars

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vraag.txt
Assets/: highscore.xml
Assets/Levels/: Level0.xml  Level1.xml  Level2.xml  Level3.xml
Assets/Sprites/Advertisements/: current.txt
CMake/: FindSDL2_mixer.cmake
FoodWars/Assets/: Assets.xml
FoodWars/Headers/: AnimationManager.h  DamageCalculator.h  LevelLoader.h  LevelManager.h  MainMenuScreen.h  OtherMenuScreen.h  PowerupManager.h  ScreenPtr.h  ScreenState.h
FoodWars/Headers/AI/: AttackState.h  FleeState.h  IdleState.h  ScavengeState.h  ShootingSimulator2019.h  ShootingSimulatorConfig.h  ShotTry.h  State.h  WanderState.h
FoodWars/Headers/GameECS/Components/: AIComponent.h  AnimationComponent.h  Component.h  DamageableComponent.h  DamagingComponent.h  DrawableComponent.h  GravityComponent.h  ItemComponent.h  JumpComponent.h  MoveComponent.h  PlayerComponent.h  PositionComponent.h  PowerupComponent.h  TurnComponent.h
FoodWars/Headers/GameECS/Entities/: EntityManager.h  EntityWithComponent.h
FoodWars/Headers/GameECS/Events/: CollisionEvent.h  CollisionEventHandler.h  CollisionEventHandlerLamda.h  TurnSwitchedEvent.h  TurnSwitchedEventHandler.h
FoodWars/Headers/GameECS/Systems/: AISystem.h  AnimationSystem.h  CollisionSystem.h  DamageableSystem.h  DrawSystem.h  GravitySystem.h  IBaseSystem.h  InputSystem.h  JumpSystem.h  MoveSystem.h  PowerupSystem.h  ShootSystem.h  ShootingSystem.h  StorageSystem.h  TurnSystem.h
FoodWars/Headers/StateMachine/: AdvertisingScreen.h  CharacterSelectionScreen.h  CreditScreen.h  DrawTransitionScreen.h  GameScreen.h  HelpScreen.h  HighscoreScreen.h  IScreen.h  LevelCreationScreen.h  LevelEditorScreen.h  LevelSelectionScreen.h  LevelTransitionScreen.h  LoseTransitionScreen.h  MainMenuScreen.h  OtherMenuScreen.h  PauseScreen.h  ScreenState.h  ScreenStateManager.h  SettingsScreen.h  UpgradesScreen.h  WinTransitionScreen.h
FoodWars/Headers/StateMachine/Misc/: CharacterBuilder.h  Coordinate.h  DifficultyEnum.h  (+8 more)
FoodWars/Headers/Storage/: EntityManagerSerializer.h  LevelStorage.h  ScoreStorage.h
FoodWars/Sources/: AnimationManager.cpp  DamageCalculator.cpp  LevelLoader.cpp  LevelManager.cpp  MainMenuScreen.cpp  OtherMenuScreen.cpp  PowerupManager.cpp  ScreenPtr.cpp  ScreenState.cpp
FoodWars/Sources/AI/: AttackState.cpp  FleeState.cpp  IdleState.cpp  ScavengeState.cpp  ShootingSimulator2019.cpp  ShootingSimulatorConfig.cpp  ShotTry.cpp  WanderState.cpp
FoodWars/Sources/StateMachine/: AdvertisingScreen.cpp  CharacterSelectionScreen.cpp  CreditScreen.cpp  DrawTransitionScreen.cpp  GameScreen.cpp  HelpScreen.cpp  HighscoreScreen.cpp  LevelCreationScreen.cpp  LevelEditorScreen.cpp  LevelSelectionScreen.cpp  LevelTransitionScreen.cpp  LoseTransitionScreen.cpp  MainMenuScreen.cpp  OtherMenuScreen.cpp  PauseScreen.cpp  ScreenPtr.cpp  ScreenState.cpp  ScreenStateManager.cpp  SettingsScreen.cpp  UpgradesScreen.cpp  WinTransitionScreen.cpp
FoodWars/Sources/Storage/: LevelStorage.cpp  ScoreStorage.cpp
FoodWars/Systems/: TurnSystem.cpp  TurnSystem.h
TonicEngine/: HelloWorld.cpp  TestClientServerBackup.cpp  Window.cpp  Window.h  main.cpp
TonicEngine/Facades/: GeneralFacade.h  IFacade.h  InputObservable.h
TonicEngine/Facades/Audio/: AudioFacade.cpp  AudioFacade.h
TonicEngine/Facades/Collision/: CollisionFacade.cpp
TonicEngine/Facades/Communication/: CommunicationFacade.cpp
TonicEngine/Facades/Storage/: StorageFacade.cpp
TonicEngine/Facades/Visual/: VisualFacade.cpp
TonicEngine/Headers/: InputObservable.h  InputSystem.h
TonicEngine/Headers/Audio/: AudioDictionary.h  AudioFacade.h  AudioPlayer.h
TonicEngine/Headers/Collision/: Circle.h  CollisionFacade.h  Rectangle.h  Shape.h  Vector2D.h
TonicEngine/Headers/Communication/: Client.h  CommunicationFacade.h  IConnection.h  Packet.h  Server.h
TonicEngine/Headers/Events/: IEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
TonicEngine/Headers/General/: Random.h  WindowResolutionCalculator.h
TonicEngine/Headers/Input/: IObservable.h  IObserver.h  InputFacade.h  InputObservable.h  KeyEventObservable.h  MouseEventObservable.h  PrintKeyInputObserver.h  PrintMouseInputObserver.h  PrintWindowObserver.h  WindowClosedObserver.h  WindowEventObservable.h
TonicEngine/Headers/Storage/: AdvertisingManager.h  ChildNodes.h  DeserializationFactory.h  DeserializationVisitor.h  DeserializeVisitor.h  FileManager.h  ISerializable.h  MyDocument.h  MyNode.h  SerializationReceiver.h  SerializationVisitor.h  StorageFacade.h  XMLDeserializationVisitor.h  XMLReader.h  XMLSerializationVisitor.h  XMLWriter.h  tinyxml2.h
TonicEngine/Headers/Visual/: AssetManager.h  Colour.h  FontManager.h  IRenderer.h  Renderlist.h  ShapeRectangle.h  ShapeSprite.h  TextureManager.h  VisualFacade.h  VisualManager.h  Window.h  WindowManager.h
TonicEngine/Sources/: GeneralFacade.cpp  InputObservable.cpp  InputSystem.cpp
TonicEngine/Sources/Audio/: AudioDictionary.cpp  AudioPlayer.cpp
TonicEngine/Sources/Collision/: Circle.cpp  Rectangle.cpp  Shape.cpp  Vector2D.cpp
TonicEngine/Sources/Communication/: Client.cpp  Server.cpp
TonicEngine/Sources/Events/: KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
TonicEngine/Sources/General/: Random.cpp  WindowResolutionCalculator.cpp
TonicEngine/Sources/Input/: InputFacade.cpp  InputObservable.cpp  InputSystem.cpp  KeyEventObservable.cpp  MouseEventObservable.cpp  PrintKeyInputObserver.cpp  PrintMouseInputObserver.cpp  PrintWindowObserver.cpp  WindowClosedObserver.cpp  WindowEventObservable.cpp
TonicEngine/Sources/Storage/: AdvertisingManager.cpp  ChildNodes.cpp  FileManager.cpp  MyDocument.cpp  MyNode.cpp  XMLDeserializationVisitor.cpp  XMLReader.cpp  XMLSerializationVisitor.cpp  XMLWriter.cpp  tinyxml2.cpp
TonicEngine/Sources/Visual/: AssetManager.cpp  Colour.cpp  FontManager.cpp  Renderlist.cpp  ShapeRectangle.cpp  ShapeSprite.cpp  TextureManager.cpp  VisualManager.cpp  Window.cpp  WindowManager.cpp
TonicEngine/Sources/communication/: CommunicationFacade.cpp  Packet.cpp
_INSTALLATION_/: README.txt
(+88 files in other folders)
